--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,1 +1,13 @@
-<h1>Welcome to the /r/gravelcycling companion site!</h1>
+<div class="jumbotron">
+  <h1 class="display-4">Welcome to the /r/gravelcycling companion app!</h1>
+  <p class="lead">We're currently tracking <%= @events %> upcoming gravel events</p>
+  <hr class="my-4">
+  <div class="row">
+    <p class="lead mx-3">
+      <%= link_to 'Browse Events', events_path, class: 'btn btn-primary btn-lg', role: 'button' %>
+    </p>
+    <p class="lead mx-3">
+      <%= link_to 'Add a New Event', root_path, class: 'btn btn-primary btn-lg', role: 'button' %>
+    </p>
+  </div>
+</div>
