--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -1,3 +1,29 @@
 // Place all the styles related to the events controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.collapsible {
+  padding: 0 18px;
+  background-color: white;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.2s ease-out;
+}
+
+.event-name-row {
+  cursor: pointer;
+}
+
+p.time-zone {
+  font-size: .65rem;
+}
+
+div.event-container {
+  background: white;
+  border-radius: 10px;
+}
+
+h1.main-header {
+  background: white;
+  width: 100%;
+}
