--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,18 +1,44 @@
-<h1>Currently tracking <%= @events.count %> upcoming gravel events</h1>
+<div class='header-row row mx-0'>
+  <h1 class='main-header text-center py-1'>Currently tracking <%= @events.flatten.count %> upcoming gravel events</h1>
+</div>
 
 <div>
-  <% prev_month = 0 %>
-  <% @events.each do |event| %>
-    <% if (event.start_month > prev_month) || (prev_month == 12 && event.start_month == 1) %>
-      <% prev_month = event.start_month %>
-      <h1><%= event.start_month_string %> <%= event.start_year %></h1>
-    <% end%>
-    <p><%= event.name %></p>
-    <p><%= event.location %></p>
-    <p><%= event.start_date %></p>
-    <p><%= event.start_hour %> <%= event.time_zone%></p>
-    <p><%= event.description %></p>
-    <p><%= event.contact %></p>
-    <p><%= event.image_url %></p>
+  <% @events.each do |events| %>
+    <div class='event-container col-10 offset-1 col-sm-8 offset-sm-2 col-md-6 offset-md-3 mt-5'>
+      <h2 class='events-date-header my-2 py-2'>
+        <%= events.first.start_month_string %> <%= events.first.start_year %>
+      </h2>
+    <% events.each do |event| %>
+      <hr class='event-separator py-0 my-0 mx-0 px-0'>
+      <div id='<%= event['id'] %>' class='event-name-row row py-0 my-0'>
+        <p class='col'><%= event.start_date %></p>
+        <p class='col-4'><strong><%= event.name %></strong></p>
+        <p class='col-4'><%= event.location %></p>
+        <p class='col time-zone'><i><%= event.start_hour %> <%= event.time_zone%></i></p>
+      </div>
+      <div id='<%= event['id'] %>' class='event-summary collapsible'>
+        <%= link_to image_tag(event.image_url), event.url %>
+        <p><%= event.description %></p>
+        <p><%= event.contact %></p>
+      </div>
+    <% end %>
+    </div>
   <% end %>
 </div>
+
+<script>
+var coll = document.getElementsByClassName('event-name-row');
+var i;
+
+for (i = 0; i < coll.length; i++) {
+  coll[i].addEventListener('click', function() {
+    this.classList.toggle('active');
+    var content = this.nextElementSibling;
+    if (content.style.maxHeight){
+      content.style.maxHeight = null;
+    } else {
+      content.style.maxHeight = content.scrollHeight + 'px';
+    }
+  });
+}
+</script>
