--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -27,3 +27,13 @@ h1.main-header {
   background: white;
   width: 100%;
 }
+
+div.form-container {
+  background: white;
+  padding: 25px;
+  border-radius: 10px;
+}
+
+form {
+  padding: 10px;
+}
