--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -7,7 +7,7 @@
       <%= link_to 'Browse Events', events_path, class: 'btn btn-primary btn-lg', role: 'button' %>
     </p>
     <p class="lead mx-3">
-      <%= link_to 'Add a New Event', root_path, class: 'btn btn-primary btn-lg', role: 'button' %>
+      <%= link_to 'Add a New Event', new_event_path, class: 'btn btn-primary btn-lg', role: 'button' %>
     </p>
   </div>
 </div>
