--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,12 @@
 
   <body>
     <%= render 'partials/navbar' %>
+    <% if notice.present? %>
+      <p class="notice text-center bg-info text-white my-0"><%= notice %></p>
+    <% end %>
+    <% if alert.present? %>
+      <p class="alert text-center bg-warning my-0"><%= alert %></p> 
+    <% end%>
     <%= yield %>
   </body>
 </html>
