--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -5,13 +5,19 @@
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
+    <ul class="navbar-nav mr-auto align-items-center">
       <li class="nav-item <%= current_page?(root_path) ? 'active' : '' %>">
         <%= link_to 'Home', root_path, class: 'nav-link' %>
       </li>
       <li class="nav-item <%= current_page?(events_path) ? 'active' : '' %> ">
         <%= link_to 'Events', events_path, class: 'nav-link' %>
       </li>
+      <li class="nav-item <%= current_page?(new_event_path) ? 'active' : '' %> ">
+        <%= link_to 'Submit an Event', new_event_path, class: 'nav-link' %>
+      </li>
     </ul>
+  </div>
+  <div class='row justify-content-end align-items-center'>
+    <%= button_to "Administration Panel", events_path, :method => "get", class:"btn btn-outline-warning my-2 my-sm-0" %>
   </div>
 </nav>
