--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -1,3 +1,24 @@
 body {
   background: image_url('gravel_texture.png');
 }
+
+.navbar-bot-status {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.dot {
+  height: 10px;
+  width: 10px;
+  border-radius: 50%;
+}
+
+.link {
+  color: white;
+}
+
+.link:hover {
+  text-decoration: none;
+  color: white;
+}
