--- a/app/assets/stylesheets/admin/events.scss
+++ b/app/assets/stylesheets/admin/events.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the admin/events controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.fading {
+  animation: fadeOut 1s linear forwards;
+}
+
+@keyframes fadeOut {
+0% { opacity:1; }
+100% { opacity:0; }
+}
